# esprit

./: .gitignore  CMakeLists.txt  esprit.cmake  setup.cmake
cmake/: FindPatch.cmake  applyPatch.cmake  colorFormatting.cmake  lnCmake.cmake  lnEmbeddedPrint.cmake  lnFreeRTOS.cmake  lnUf2.cmake  ln_merge_libs.cmake  ln_use_library.cmake  rnCmake.cmake  rust_esprit.cmake  rustgen.py  rustgen.sh  rustgen_c.sh  rustgen_lang.sh
demoProject/: common_CMakeLists.cmake  common_mcuSelect.cmake  common_platformConfig.cmake
demoProject/bp/advanceADC/: CMakeLists.txt
demoProject/bp/mcp23017/: CMakeLists.txt  hello.cpp
demoProject/bp/pwm/: CMakeLists.txt
demoProject/bp/rotaryEncoder/: CMakeLists.txt
demoProject/bp/rust_timing_adc/: CMakeLists.txt
demoProject/bp/rust_timing_adc/src/: CMakeLists.txt
demoProject/bp/rust_timing_adc/src/src/: app.rs
demoProject/bp/simplerMCP4725/: CMakeLists.txt  hello.cpp
demoProject/bp/ws2812b_timer/: CMakeLists.txt
demoProject/common/rust_fake_std/: CMakeLists.txt
demoProject/common/rust_fake_std/rust/: CMakeLists.txt
demoProject/common/rust_fake_std/rust/rust_demo/: Cargo.toml
demoProject/common/rust_fake_std/rust/rust_demo/src/: lib.rs
demoProject/common/rust_fake_std/src/: demo.cpp
demoProject/common/rust_gpio/: CMakeLists.txt
demoProject/common/rust_gpio/rust/rust_demo/: Cargo.toml
demoProject/common/rust_gpio/rust/rust_demo/src/: lib.rs
demoProject/common/rust_gpio/src/: demo.cpp
demoProject/common/rust_i2c_scanner/: CMakeLists.txt
demoProject/common/rust_i2c_scanner/rust/rust_demo/src/: lib.rs
demoProject/common/segger-rtt/: CMakeLists.txt  hello.cpp
demoProject/common/serial/: CMakeLists.txt
demoProject/common/usb_cdc/: CMakeLists.txt
demoProject/complicated/everything/: CMakeLists.txt  platformConfig.cmake
demoProject/rp/rp_blink/: CMakeLists.txt
demoProject/rp/ws2812_pio/: CMakeLists.txt
include/: lnCpuID.h  lnFreeRTOS_pp.h  lnGPIO.h  lnLWIP.h  lnPeripherals.h  lnRCU.h  lnSocketRunner.h
libraries/NeVerMind/: CMakeLists.txt  nvmCore.cpp  nvmCore.h
libraries/RotaryEncoder/: CMakeLists.txt
libraries/WS2812B/: CMakeLists.txt  lnWS2812B.cpp  lnWS2812B.h  lnWS2812B_base.cpp  lnWS2812B_base.h  lnWS2812B_timer.cpp  lnWS2812B_timer.h
libraries/WS2812_rp_single/: CMakeLists.txt
libraries/ln-rtt/: CMakeLists.txt
libraries/ln-rtt/include/: LN_RTT.h
libraries/ln-rtt/private_include/: ln-rtt_priv.h
libraries/ln-rtt/src/: LN_RTT.cpp  LN_RTT_var.cpp
libraries/lwip_esprit/: CMakeLists.txt  Filelists.cmake  esprit_lwip.cpp
libraries/lwip_esprit/include/: lnSocketRunner.h  ln_lwip_debug.h  lwipopts.h
libraries/lwip_esprit/include/arch/: cc.h  ln_verbose.h  sys_arch.h
libraries/mcp23017/: CMakeLists.txt
libraries/segger-rtt/: CMakeLists.txt  lnLogger_rtt.cpp
libraries/simplerAD9833/: CMakeLists.txt  (+2 more)
libraries/tinyUsb/: CMakeLists.txt
libraries/tinyUsb/include/: lnUsbCDC.h
libraries/tinyUsb/lnSrc/: lnUsbCDC.cpp  lnUsbDFU.cpp  lnUsbStack.cpp
libraries/tinyUsb/src/examples/device/cdc_dual_ports/: CMakeLists.txt
libraries/tinyUsb/src/examples/device/cdc_msc/: CMakeLists.txt
libraries/tinyUsb/src/examples/device/cdc_msc_freertos/: CMakeLists.txt
libraries/tinyUsb/src/examples/device/cdc_msc_freertos/src/: CMakeLists.txt
libraries/tinyUsb/src/examples/device/dfu/: CMakeLists.txt
libraries/tinyUsb/src/src/: CMakeLists.txt
mcus/arm_rp2040/src/: CMakeLists.txt  ln_rp_spi.cpp
mcus/arm_rp2350/src/: CMakeLists.txt  ln_rp_spi.cpp
mcus/common_bluepill/: CMakeLists.txt  lnADC_timing.cpp  lnDma.cpp  lnDmaTimer.cpp  lnExti.cpp  lnGPIO.cpp  lnI2C.cpp  lnI2C_impl.cpp  lnMultiPulse.cpp  lnRCU.cpp  lnSPI_bp.cpp  lnSPI_bp_dma.cpp  lnSerialCore.cpp  lnSerialRxTx.cpp  lnSerialRxTxDma.cpp  lnSerialTxOnly.cpp  lnSerialTxOnlyDma.cpp  lnSerialTxOnlyDmaBuffer.cpp  lnSystemInit.cpp  lnTimer.cpp
mcus/common_bluepill/include/: lnADC.h  lnI2C.h  lnMultiPulse.h  lnSPI_bp.h  lnSerialBpCore.h  lnSerialRxTx.h  lnSerialRxTxDma.h  lnSerialTxOnly.h  lnSerialTxOnlyDma.h  lnTimer.h
mcus/riscv_ch32v3x/lwip/: CMakeLists.txt
mcus/riscv_ch32v3x/lwip/private_include/: ch32v30x_eth.h  ch32v3xx_eth_private.h  eth_driver.h
mcus/riscv_ch32v3x/lwip/src/: ch32v30x_eth.cpp  ch32v30x_eth_mmc.cpp  ch32v30x_eth_ptp.cpp  ch32v30x_eth_unused.cpp  ch32v3_eth_driver.cpp  ch32v3_ethernetif.cpp  esprit_ch32v3xx.cpp
mcus/riscv_ch32v3x/lwip208/: CMakeLists.txt  license.txt
mcus/riscv_ch32v3x/lwip208/private_include/: ch32v20x.h  ch32v30x_eth.h  eth.h  eth_driver.h
mcus/riscv_ch32v3x/lwip208/src/: ch32v30x_eth.cpp  ch32v3_eth_driver.cpp  ch32v3_ethernetif.cpp  esprit_ch32v3xx.cpp  eth.cpp  eth_driver.cpp
mcus/riscv_ch32v3x/lwip307/: CMakeLists.txt
private_include/: lnGPIO_priv.h  lnI2C_impl.h  lnRCU_priv.h  lnTimer_priv.h  lnUSBD_endPoints.h
rust/: CMakeLists.txt
rust/corrosion/: CMakeLists.txt
rust/corrosion/cmake/: Corrosion.cmake  CorrosionGenerator.cmake  FindRust.cmake
rust/rust_esprit/: Cargo.toml
rust/rust_esprit/c_interface/: bindgen.py  bindgen.sh  lnGPIO_c.cpp  lnGPIO_c.h  lnI2C_c.cpp  lnI2C_c.h  lnMultiPulse_c.cpp  lnMultiPulse_c.h  lnSPI_c.cpp  lnSPI_c.h  lnSerial_c.cpp  lnSerial_c.h  lnTimer_c.cpp  lnTimer_c.h  lnTiming_adc_c.cpp  lnTiming_adc_c.h
rust/rust_esprit/src/: adc.rs  cdc.rs  event.rs  exti.rs  gpio.rs  hal.rs  i2c.rs  lib.rs  lnAll.h  logger.rs  multi_pulse.rs  pin_types.rs  queue.rs  rn_exti.rs  rn_fast_gpio_bp.rs  rn_fast_gpio_esp32c3.rs  rn_freertos_c.rs  rn_gpio.rs  rn_gpio_bp_c.rs  rn_gpio_esp32_c.rs  rn_gpio_rp2040_c.rs  rn_i2c_c.rs  rn_logger.rs  rn_os_helper.rs  rn_timer_c.rs  rn_timing_adc_c.rs  rn_usb.rs  rn_usb_cdc.rs  serial.rs  spi.rs  sync.rs  task.rs  timer.rs  usb.rs
rust/rust_esprit/src/c_api/: mod.rs  rn_cdc_c.rs  rn_debug_c.rs  rn_exti_c.rs  rn_fast_event_c.rs  rn_freertos_c.rs  rn_gpio_bp_c.rs  rn_gpio_esp32_c.rs  rn_gpio_rp2040_c.rs  rn_i2c_c.rs  rn_multi_pulse_c.rs  rn_serial_c.rs  rn_spi_c.rs  rn_timer_c.rs  rn_timing_adc_c.rs  rn_usb_c.rs
script/: build.py
src/: CMakeLists.txt  lnFreeRTOSDebug.cpp  lnFreeRTOS_pp.cpp  lnSocketRunner.cpp  lnStopWatch.cpp
(+95 files in other folders)
