add_library(ln-rtt STATIC)
set(S ${CMAKE_CURRENT_SOURCE_DIR})
target_sources(ln-rtt PRIVATE ${S}/src/LN_RTT.cpp ${S}/src/LN_RTT_var.cpp)
target_include_directories(ln-rtt PUBLIC ${S}/include)
target_include_directories(ln-rtt PRIVATE ${S}/private_include)
target_include_directories(esprit_dev INTERFACE ${S}/include)
target_link_libraries(ln-rtt PRIVATE esprit_dev)
