set(SEGGER_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}/segger/)
add_library(segger-rtt STATIC)
set(S ${SEGGER_FOLDER}/RTT)
target_sources(segger-rtt PRIVATE ${S}/SEGGER_RTT.c ${S}/SEGGER_RTT_ASM_ARMv7M.S lnLogger_rtt.cpp)
target_compile_definitions(segger-rtt PRIVATE SEGGER_RTT_MODE_DEFAULT=1) # Trim
if(("${LN_MCU}" STREQUAL "M3")
   OR ("${LN_MCU}" STREQUAL "M4")
   OR ("${LN_MCU}" STREQUAL "M33"))
  target_sources(segger-rtt PRIVATE ${S}/SEGGER_RTT_printf.c)
endif()
target_include_directories(segger-rtt PUBLIC ${SEGGER_FOLDER}/Config ${S})
target_include_directories(esprit_dev INTERFACE ${SEGGER_FOLDER}/Config ${S})
