[package] 
authors = ["mean00 <mean00@gmail.com>"]
readme = "README.md"
name = "rust_esprit"
version = "0.0.0"
edition = "2024"

[dependencies]
cty = "0.2.2"
ufmt = { version = "0.2.0", default-features = false }
heapless = { version = "0.7.17", features = ["ufmt-impl"] }
cfg-if = "1.0"

[features]
cdc = []
rp2040 = []
esp32 = []
default = []

[lib]
name = "rust_esprit"
path = "src/lib.rs"
crate-type = ["rlib"] # Creates static lib

