[package] 
authors = ["mean00 <mean00@gmail.com>"]
readme = "README.md"
name = "rust_esprit"
version = "0.0.0"
edition = "2024"

[dependencies]
cty = "0.2.2"
ufmt = { version = "0.2.0", default-features = false }
heapless = { version = "0.7.17", features = ["ufmt-impl"] }
cfg-if = "1.0"

[features]
cdc = []
embedded-hal = []
rp2040 = []
esp32 = []
default = []

# esprit provides its own std-compatible shim (FreeRTOS-backed).
# Removes #![no_std] and re-exports FreeRTOS-backed implementations
# under a `std` namespace so that embedded crates depending on `std`
# can compile on the embedded target.
fake_std = []

# esprit is used inside an existing std-enabled framework.
# The framework provides the real `std`; esprit just removes #![no_std].
external_std = []

[lib]
name = "rust_esprit"
path = "src/lib.rs"
crate-type = ["rlib"] # Creates static lib
